minor updates to 9.2

--- a/course-materials/lecture-slides/lecture9.1-data-stories-slides.qmd
+++ b/course-materials/lecture-slides/lecture9.1-data-stories-slides.qmd
@@ -104,7 +104,7 @@ You have all listened to, read, and told stories (in this class, in other classe
 >"Stories are inherent to us. We've been told stories since we were children. Stories are how we learn and how we make decisions."
 
 ::: {.right-align-text .body-text-s}
--[Mike Bugembe](https://www.linkedin.com/in/mikebugembe/?originalSubdomain=uk){target="_blank"} in his TED talk, [Lies, racism and sexism: The power of data stories](https://www.ted.com/talks/mike_bugembe_lies_racism_and_sexism_the_power_of_data_stories?hasSummary=true){target="_blank"} (13:00-17:50)
+-[Mike Bugembe](https://www.linkedin.com/in/mikebugembe/?originalSubdomain=uk){target="_blank"} in his TED talk, [Lies, racism and sexism: The power of data stories](https://www.youtube.com/watch?v=rZ4xRLfpkXQ){target="_blank"} (13:00-17:50)
 :::
 
 ::: {.footer}
@@ -858,12 +858,12 @@ knitr::include_graphics("images/week8/chalabi-vaquitas.png")
 ::::
 
 ::: {.footer}
-[ endangered species that could (almost) fit in a single train carriage](https://www.theguardian.com/environment/gallery/2018/sep/17/endangered-species-on-a-train){target="_blank"}, by [Mona Chalabi](https://monachalabi.com/){target="_blank"} (two of seven shown here)
+[endangered species that could (almost) fit in a single train carriage](https://www.theguardian.com/environment/gallery/2018/sep/17/endangered-species-on-a-train){target="_blank"}, by [Mona Chalabi](https://monachalabi.com/){target="_blank"} (two of seven shown here)
 :::
 
 ```{r}
 countdown::countdown(
-  minutes = 3,
+  minutes = 2,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -901,7 +901,7 @@ Fig. 3, by [Ingeman et al. 2022](https://www.nature.com/articles/s41598-022-1367
 
 ```{r}
 countdown::countdown(
-  minutes = 3,
+  minutes = 2,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -956,7 +956,7 @@ knitr::include_graphics("images/week8/scherer-plants.png")
 
 ```{r}
 countdown::countdown(
-  minutes = 3,
+  minutes = 2,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -970,108 +970,108 @@ countdown::countdown(
   )
 ```
 
----
+<!-- --- -->
 
-## {#data-samples1 data-menu-title="Our data are samples (a)"} 
+<!-- ## {#data-samples1 data-menu-title="Our data are samples (a)"}  -->
 
-[Understand your data & be accurate]{.slide-title}
+<!-- [Understand your data & be accurate]{.slide-title} -->
 
-<hr>
+<!-- <hr> -->
 
-This has less to do with the physical act of creating data viz / telling a story and everything to do with your own **critical examination of your data and domain expertise**. Two important reminders:
+<!-- This has less to do with the physical act of creating data viz / telling a story and everything to do with your own **critical examination of your data and domain expertise**. Two important reminders: -->
 
-. . . 
+<!-- . . .  -->
 
-:::: columns 
+<!-- :::: columns  -->
 
-::: {.column width="50%"}
-1. [**Our data is never a perfect reflection of the real world**]{.teal-text} -- our data is always a *sample*
-:::
+<!-- ::: {.column width="50%"} -->
+<!-- 1. [**Our data is never a perfect reflection of the real world**]{.teal-text} -- our data is always a *sample* -->
+<!-- ::: -->
 
-::: {.column width="50%"}
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "80%"
-#| fig-align: "center"
-knitr::include_graphics("images/week8/ny-rats.png")
-```
-:::
+<!-- ::: {.column width="50%"} -->
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| out-width: "80%" -->
+<!-- #| fig-align: "center" -->
+<!-- knitr::include_graphics("images/week8/ny-rats.png") -->
+<!-- ``` -->
+<!-- ::: -->
 
-::::
+<!-- :::: -->
 
-::: footer
-From [Cédric Scherer](https://www.cedricscherer.com/)'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk) and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) workshop
-:::
+<!-- ::: footer -->
+<!-- From [Cédric Scherer](https://www.cedricscherer.com/)'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk) and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) workshop -->
+<!-- ::: -->
 
----
+<!-- --- -->
 
-## {#data-samples2 data-menu-title="Our data are samples (b)"} 
+<!-- ## {#data-samples2 data-menu-title="Our data are samples (b)"}  -->
 
-[Understand your data & be accurate]{.slide-title}
+<!-- [Understand your data & be accurate]{.slide-title} -->
 
-<hr>
+<!-- <hr> -->
 
-This has less to do with the physical act of creating data viz / telling a story and everything to do with your own **critical examination of your data and domain expertise**. Two important reminders:
+<!-- This has less to do with the physical act of creating data viz / telling a story and everything to do with your own **critical examination of your data and domain expertise**. Two important reminders: -->
 
-:::: {.columns} 
+<!-- :::: {.columns}  -->
 
-::: {.column width="50%"}
-1. [**Our data is never a perfect reflection of the real world**]{.teal-text} -- our data is always a *sample*
-:::
+<!-- ::: {.column width="50%"} -->
+<!-- 1. [**Our data is never a perfect reflection of the real world**]{.teal-text} -- our data is always a *sample* -->
+<!-- ::: -->
 
-::: {.column width="50%"}
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "80%"
-#| fig-align: "center"
-knitr::include_graphics("images/week8/ny-rats-update.png")
-```
-:::
+<!-- ::: {.column width="50%"} -->
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| out-width: "80%" -->
+<!-- #| fig-align: "center" -->
+<!-- knitr::include_graphics("images/week8/ny-rats-update.png") -->
+<!-- ``` -->
+<!-- ::: -->
 
-::::
+<!-- :::: -->
 
-::: footer
-From [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"}'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk){target="_blank"} and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/){target="_blank"} workshop
-:::
+<!-- ::: footer -->
+<!-- From [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"}'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk){target="_blank"} and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/){target="_blank"} workshop -->
+<!-- ::: -->
 
----
+<!-- --- -->
 
-## {#what-isnt-true data-menu-title="Data show what isn't true"} 
+<!-- ## {#what-isnt-true data-menu-title="Data show what isn't true"}  -->
 
-[Understand your data & be accurate]{.slide-title}
+<!-- [Understand your data & be accurate]{.slide-title} -->
 
-<hr>
+<!-- <hr> -->
 
-This has less to do with the physical act of creating data viz / telling a story and everything to do with your own **critical examination of your data and domain expertise**. Two important reminders:
+<!-- This has less to do with the physical act of creating data viz / telling a story and everything to do with your own **critical examination of your data and domain expertise**. Two important reminders: -->
 
-:::: columns 
+<!-- :::: columns  -->
 
-::: {.column width="50%"}
-1. [**Our data is never a perfect reflection of the real world**]{.teal-text} -- our data is always a *sample*
+<!-- ::: {.column width="50%"} -->
+<!-- 1. [**Our data is never a perfect reflection of the real world**]{.teal-text} -- our data is always a *sample* -->
 
-<br>
+<!-- <br> -->
 
-2. [**The best use of data is to teach us what isn't true**]{.teal-text} -- you should be challenging yourself to find out something with your data, not to show that your assumptions about what you'll find are true
-:::
+<!-- 2. [**The best use of data is to teach us what isn't true**]{.teal-text} -- you should be challenging yourself to find out something with your data, not to show that your assumptions about what you'll find are true -->
+<!-- ::: -->
 
-::: {.column width="50%"}
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "50%"
-#| fig-align: "center"
-knitr::include_graphics("images/week8/jones-book.png")
-```
+<!-- ::: {.column width="50%"} -->
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| out-width: "50%" -->
+<!-- #| fig-align: "center" -->
+<!-- knitr::include_graphics("images/week8/jones-book.png") -->
+<!-- ``` -->
 
-::: {.center-text .body-text-s .gray-text}
-[Avoiding Data Pitfalls](https://www.amazon.com/Avoiding-Data-Pitfalls-presenting-visualizations/dp/1119278163){target="_blank"}, by [Ben Jones](https://www.linkedin.com/in/benrjones/){target="_blank"}
-:::
+<!-- ::: {.center-text .body-text-s .gray-text} -->
+<!-- [Avoiding Data Pitfalls](https://www.amazon.com/Avoiding-Data-Pitfalls-presenting-visualizations/dp/1119278163){target="_blank"}, by [Ben Jones](https://www.linkedin.com/in/benrjones/){target="_blank"} -->
+<!-- ::: -->
 
-:::
+<!-- ::: -->
 
-::::
+<!-- :::: -->
 
 ::: footer
 From [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"}'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk){target="_blank"} and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/){target="_blank"} workshop
