--- a/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
+++ b/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
@@ -37,7 +37,7 @@ format:
 - [**color choices** (incl. palette types, emotions, readability)]{.gray-text}
 - [how to **tell an interesting story**]{.gray-text}
 - how to **center the people and communities** represented in your data
-- [**accessibility** through colorblind-friendly palettes & alt text (see [week 2 discussion](https://samanthacsik.github.io/EDS-240-data-viz/course-materials/week2.html#discussion-materials))]{.gray-text}
+- [**accessibility** through colorblind-friendly palettes & alt text]{.gray-text}
 
 ---
 
@@ -84,7 +84,7 @@ Source: [Mapping Inequality: Redlining in New Deal America (v3)](https://dsl.ric
 - [**Redlining:** the practice of categorically withholding financial services, especially mortgages, from neighborhoods that have a significant number of racial or ethnic minorities]{.body-text-s}
 - [Between 1935-1940, the [Home Owners' Loan Corporation](https://en.wikipedia.org/wiki/Home_Owners'_Loan_Corporation){target="_blank"} (HOLC) graded "residential security" (i.e. financial risk) of neighborhoods in most major metropolitan areas across the US]{.body-text-s}
 - [Color-coded maps depict grades, where green represents the "best" neighborhoods and safest investments. Red represents "hazardous" neighborhoods and riskiest investments.]{.body-text-s}
-- [Neighborhoods earned a red grade if African Americans lived in it, even if it was a  middle-class neighborhood of single-family homes ([Rothstein 2017](https://en.wikipedia.org/wiki/The_Color_of_Law){target="_blank"})]{.body-text-s}
+- [A neighborhood earned a red grade if African Americans lived in it, even if it was a  middle-class neighborhood of single-family homes ([Rothstein 2017](https://en.wikipedia.org/wiki/The_Color_of_Law){target="_blank"})]{.body-text-s}
 :::
 
 ::::
@@ -703,7 +703,7 @@ Quotes from Vermulen, De Korte, and Van Houtum
 <br>
 <br>
 
->[“the action of understanding, being aware of, being sensitive to, and vicariously experiencing the feelings, thoughts, and experience of another”]{.body-text-l}
+>[“the action of understanding, being aware of, being sensitive to, and vicariously experiencing the feelings, thoughts, and experiences of another”]{.body-text-l}
 
 ::: {.right-align-text}
 -[Merriam-Webster](https://www.merriam-webster.com/dictionary/empathy){target="_blank"}
@@ -1617,7 +1617,7 @@ Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/mo
 
 ```{r}
 countdown::countdown(
-  minutes = 2,
+  minutes = 3,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
