removed succession of slides for chalabi example

--- a/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
+++ b/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
@@ -1466,112 +1466,112 @@ knitr::include_graphics("images/week8/lupi-streets.png")
 <p class="custom-subtitle bottombr">Consider the following examples of "people as data." How do your perceive / interpret / comprehend the information across each version of the visualizations?</p>
 </div>
 
+<!-- --- -->
+
+<!-- ## {#chalabi1 data-menu-title="Chalabi 1"}  -->
+
+<!-- [Destruction of Gaza, by Mona Chalabi]{.slide-title} -->
+
+<!-- <hr> -->
+
+<!-- :::: {.columns} -->
+
+<!-- ::: {.column width="33%"} -->
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| out-width: "90%" -->
+<!-- #| fig-align: "center" -->
+<!-- knitr::include_graphics("images/week8/chalabi-palestine3.png") -->
+<!-- ``` -->
+<!-- ::: -->
+
+<!-- ::: {.column width="33%"} -->
+<!-- ::: -->
+
+<!-- ::: {.column width="33%"} -->
+<!-- ::: -->
+
+<!-- :::: -->
+
+<!-- ::: {.footer} -->
+<!-- Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en){target="_blank"}, here in reverse order -->
+<!-- ::: -->
+
+<!-- ```{r} -->
+<!-- countdown::countdown( -->
+<!--   minutes = 2, -->
+<!--   # left = 0, right = 0, -->
+<!--   # Fanfare when it's over -->
+<!--   play_sound = TRUE, -->
+<!--   color_border              = "#FFFFFF", -->
+<!--   color_text                = "#7aa81e", -->
+<!--   color_running_background  = "#7aa81e", -->
+<!--   color_running_text        = "#FFFFFF", -->
+<!--   color_finished_background = "#ffa07a", -->
+<!--   color_finished_text       = "#FFFFFF", -->
+<!--   font_size = "2em", -->
+<!--   ) -->
+<!-- ``` -->
+
+<!-- --- -->
+
+<!-- ## {#chalabi2 data-menu-title="Chalabi 2"}  -->
+
+<!-- [Destruction of Gaza, by Mona Chalabi]{.slide-title} -->
+
+<!-- <hr> -->
+
+<!-- :::: {.columns} -->
+
+<!-- ::: {.column width="33%"} -->
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| out-width: "90%" -->
+<!-- #| fig-align: "center" -->
+<!-- knitr::include_graphics("images/week8/chalabi-palestine3.png") -->
+<!-- ``` -->
+<!-- ::: -->
+
+<!-- ::: {.column width="33%"} -->
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| out-width: "90%" -->
+<!-- #| fig-align: "center" -->
+<!-- knitr::include_graphics("images/week8/chalabi-palestine2.png") -->
+<!-- ``` -->
+<!-- ::: -->
+
+<!-- ::: {.column width="33%"} -->
+<!-- ::: -->
+
+<!-- :::: -->
+
+<!-- ::: {.footer} -->
+<!-- Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en){target="_blank"}, here in reverse order -->
+<!-- ::: -->
+
+<!-- ```{r} -->
+<!-- countdown::countdown( -->
+<!--   minutes = 3, -->
+<!--   # left = 0, right = 0, -->
+<!--   # Fanfare when it's over -->
+<!--   play_sound = TRUE, -->
+<!--   color_border              = "#FFFFFF", -->
+<!--   color_text                = "#7aa81e", -->
+<!--   color_running_background  = "#7aa81e", -->
+<!--   color_running_text        = "#FFFFFF", -->
+<!--   color_finished_background = "#ffa07a", -->
+<!--   color_finished_text       = "#FFFFFF", -->
+<!--   font_size = "2em", -->
+<!--   ) -->
+<!-- ``` -->
+
 ---
 
-## {#chalabi1 data-menu-title="Chalabi 1"} 
-
-[Destruction of Gaza, by Mona Chalabi]{.slide-title}
-
-<hr>
-
-:::: {.columns}
-
-::: {.column width="33%"}
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "90%"
-#| fig-align: "center"
-knitr::include_graphics("images/week8/chalabi-palestine3.png")
-```
-:::
-
-::: {.column width="33%"}
-:::
-
-::: {.column width="33%"}
-:::
-
-::::
-
-::: {.footer}
-Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en){target="_blank"}, here in reverse order
-:::
-
-```{r}
-countdown::countdown(
-  minutes = 2,
-  # left = 0, right = 0,
-  # Fanfare when it's over
-  play_sound = TRUE,
-  color_border              = "#FFFFFF",
-  color_text                = "#7aa81e",
-  color_running_background  = "#7aa81e",
-  color_running_text        = "#FFFFFF",
-  color_finished_background = "#ffa07a",
-  color_finished_text       = "#FFFFFF",
-  font_size = "2em",
-  )
-```
-
----
-
-## {#chalabi2 data-menu-title="Chalabi 2"} 
-
-[Destruction of Gaza, by Mona Chalabi]{.slide-title}
-
-<hr>
-
-:::: {.columns}
-
-::: {.column width="33%"}
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "90%"
-#| fig-align: "center"
-knitr::include_graphics("images/week8/chalabi-palestine3.png")
-```
-:::
-
-::: {.column width="33%"}
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "90%"
-#| fig-align: "center"
-knitr::include_graphics("images/week8/chalabi-palestine2.png")
-```
-:::
-
-::: {.column width="33%"}
-:::
-
-::::
-
-::: {.footer}
-Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en){target="_blank"}, here in reverse order
-:::
-
-```{r}
-countdown::countdown(
-  minutes = 2,
-  # left = 0, right = 0,
-  # Fanfare when it's over
-  play_sound = TRUE,
-  color_border              = "#FFFFFF",
-  color_text                = "#7aa81e",
-  color_running_background  = "#7aa81e",
-  color_running_text        = "#FFFFFF",
-  color_finished_background = "#ffa07a",
-  color_finished_text       = "#FFFFFF",
-  font_size = "2em",
-  )
-```
-
----
-
-## {#chalabi3 data-menu-title="Chalabi 3"} 
+## {#chalabi data-menu-title="Chalabi"} 
 
 [Destruction of Gaza, by Mona Chalabi]{.slide-title}
 
