updates to 10.1 code; still updating 10.2

--- a/assignments.qmd
+++ b/assignments.qmd
@@ -48,7 +48,7 @@ End-of-class surveys (EOCs) will become available at the end of each class (Mond
 | *No lecture or EOC (week 7)* | *NA*           | *NA*           |
 | [EOC (week 8)](https://forms.gle/Qvce8dggyWps19og6)                 | Mon 02/24/2025 | Mon 02/24/2025 |
 | [EOC (week 9)](https://forms.gle/s2CYKfaHYY79cR4d6)                 | Mon 03/03/2025 | Mon 03/03/2025 |
-| EOC (week 10)                | Mon 03/10/2025 | Mon 03/10/2025 |
+| [EOC (week 10)](https://forms.gle/VT4GfL4kGtL4jwNG8)                | Mon 03/10/2025 | Mon 03/10/2025 |
 
 <!-- - [EOC (week 1)](https://forms.gle/RGd3qzQR4ue9HvfR8) -->
 <!-- - [EOC (week 2)](https://forms.gle/XMnf7cxrxmbcAA5k6) -->
