--- a/course-materials/lecture-slides/lecture10.2-recap-slides.qmd
+++ b/course-materials/lecture-slides/lecture10.2-recap-slides.qmd
@@ -171,83 +171,10 @@ knitr::include_graphics("images/week10/ggplot2.png")
 
 ---
 
-## {#week2 data-menu-title="Week 2"} 
+## {#week2-4 data-menu-title="Week 2 & 4"} 
 
 ::: {.center-text}
-[Week 2]{.slide-title-xl}
-:::
-
-<br>
-
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "100%"
-#| fig-align: "center"
-#| fig-alt: "A formula for writing alternative text, which says you should always include (a) the chart type, (b) the type of data being presented, and (c) the reason for including the chart. You should also link to the data source somewhere in the text."
-knitr::include_graphics("images/week10/alt-text.png")
-```
-
-::: {.footer}
-week 1 | [**week 2**]{.teal-text} | week 3 | week 4 | week 5 | week 6 | week 7 | week 8 | week 9 | week 10
-:::
-
----
-
-## {#alt-text data-menu-title="alt text"} 
-
-[We crafted effective alt text to improve data viz accessibility]{.slide-title3}
-
-<hr>
-
-<br>
-
-```{r}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "50%"
-#| fig-alt: "Colored stripes of chronologically ordered temperatures where they increase in red to show the warming global temperature"
-knitr::include_graphics("images/week10/hawkins-warming-stripes.png")
-```
-
-<br>
-
-[**alt="[Colored stripes]{style="background-color:#FFE600"} of [chronologically ordered temperatures]{style="background-color:#6DFFF8"} where [they increase in red to show the warming global temperature]{style="background-color:#74FF75"}"**]{.body-text-s}
-
-::: {.footer}
-week 1 | [**week 2**]{.teal-text} | week 3 | week 4 | week 5 | week 6 | week 7 | week 8 | week 9 | week 10
-:::
-
----
-
-## {#inspect-alt-text data-menu-title="Inspect alt text"} 
-
-[And learned how to make sure it was added successfully]{.slide-title3}
-
-<hr>
-
-```{r}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "50%"
-#| fig-alt: "Colored stripes of chronologically ordered temperatures where they increase in red to show the warming global temperature"
-knitr::include_graphics("images/week10/inspect-alt-text.png")
-```
-
-<br>
-
-::: {.footer}
-week 1 | [**week 2**]{.teal-text} | week 3 | week 4 | week 5 | week 6 | week 7 | week 8 | week 9 | week 10
-:::
-
----
-
-## {#week3-4 data-menu-title="Week 3 & 4"} 
-
-::: {.center-text}
-[Weeks 3 & 4]{.slide-title-xl}
+[Weeks 2 & 4]{.slide-title-xl}
 :::
 
 <br>
@@ -263,7 +190,7 @@ knitr::include_graphics("images/week10/horst-ggplot-explore-dataviz.png")
 <br>
 
 ::: {.footer}
-week 1 | week 2 | [**week 3**]{.teal-text} | [**week 4**]{.teal-text} | week 5 | week 6 | week 7 | week 8 | week 9 | week 10
+week 1 | [**week 2**]{.teal-text} | week 3 | [**week 4**]{.teal-text} | week 5 | week 6 | week 7 | week 8 | week 9 | week 10
 :::
 
 ---
@@ -336,7 +263,7 @@ Source: [New York Times](https://www.nytimes.com/2021/09/16/learning/whats-going
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-knitr::include_graphics("images/week10/apple-sankey.png")
+knitr::include_graphics("images/week10/sankey-plastics.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
@@ -428,7 +355,7 @@ line charts, area charts (including stacked & proportional stacked area charts)
 ::: {.center-text}
 [**Rankings:**]{.teal-text .body-text-m} 
 
-bar plots, lollipop plots (and dumbbell variant)
+bar plots, lollipop plots (and dumbbell variant), dotplots, heatmaps 
 :::
 
 <br>
@@ -621,6 +548,79 @@ Our recreation!
 
 ::: {.footer}
 week 1 | week 2 | week 3 | [**week 4**]{.teal-text} | week 5 | week 6 | week 7 | week 8 | week 9 | week 10
+:::
+
+---
+
+## {#week3 data-menu-title="Week 3"} 
+
+::: {.center-text}
+[Week 3]{.slide-title-xl}
+:::
+
+<br>
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+#| fig-alt: "A formula for writing alternative text, which says you should always include (a) the chart type, (b) the type of data being presented, and (c) the reason for including the chart. You should also link to the data source somewhere in the text."
+knitr::include_graphics("images/week10/alt-text.png")
+```
+
+::: {.footer}
+week 1 | week 2 | [**week 3**]{.teal-text} | week 4 | week 5 | week 6 | week 7 | week 8 | week 9 | week 10
+:::
+
+---
+
+## {#alt-text data-menu-title="alt text"} 
+
+[We crafted effective alt text to improve data viz accessibility]{.slide-title3}
+
+<hr>
+
+<br>
+
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "50%"
+#| fig-alt: "Colored stripes of chronologically ordered temperatures where they increase in red to show the warming global temperature"
+knitr::include_graphics("images/week10/hawkins-warming-stripes.png")
+```
+
+<br>
+
+[**alt="[Colored stripes]{style="background-color:#FFE600"} of [chronologically ordered temperatures]{style="background-color:#6DFFF8"} where [they increase in red to show the warming global temperature]{style="background-color:#74FF75"}"**]{.body-text-s}
+
+::: {.footer}
+week 1 | week 2 | [**week 3**]{.teal-text} | week 4 | week 5 | week 6 | week 7 | week 8 | week 9 | week 10
+:::
+
+---
+
+## {#inspect-alt-text data-menu-title="Inspect alt text"} 
+
+[And learned how to make sure it was added successfully]{.slide-title3}
+
+<hr>
+
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "50%"
+#| fig-alt: "Colored stripes of chronologically ordered temperatures where they increase in red to show the warming global temperature"
+knitr::include_graphics("images/week10/inspect-alt-text.png")
+```
+
+<br>
+
+::: {.footer}
+week 1 | week 2 | [**week 3**]{.teal-text} | week 4 | week 5 | week 6 | week 7 | week 8 | week 9 | week 10
 :::
 
 ---
@@ -859,11 +859,11 @@ week 1 | week 2 | week 3 | week 4 | [**week 5**]{.teal-text} | week 6 | week 7 |
 
 :::: {.columns}
 ::: {.column width="50%"}
-Tools: 
+**Tools:** 
 
 - [`{viridis}` & `{RColorBrewer}` (great options for colorblind-friendly palettes)]{.body-text-s}
 
-- [`{paletteer}` and the [R Color Palettes](https://emilhvitfeldt.github.io/r-color-palettes/) website]{.body-text-s}
+- [`{paletteer}` for accessing lots of different palettes]{.body-text-s}
 
 - [Chrome extensions for simulating vision deficiencies & gray scale]{.body-text-s}
 
@@ -871,7 +871,7 @@ Tools:
 
 - [`{ggplot2}` color scaling functions]{.body-text-s}
 
-Tips: 
+**Tips:**
 
 - [save palettes as vectors outside of your plot]{.body-text-s}
 
@@ -942,7 +942,7 @@ base_map +
                          0,
                          max(na.omit(joined_precip_geom)$perc_change)))) +
   guides(fill = guide_colorbar(label.hjust = 0.5,
-                               barwidth = 15, barheight = 0.75))
+                               barwidth = 25, barheight = 0.75))
 ```
 :::
 
@@ -960,7 +960,7 @@ my_brew_palette10 <- RColorBrewer::brewer.pal(n = 10, name = 'BrBG')
 base_map + 
   scale_fill_stepsn(colors = my_brew_palette10,
                     labels = scales::label_percent(scale = 1),
-                    breaks = scales::breaks_width(width = 10)) +
+                    breaks = scales::breaks_width(width = 5)) +
   guides(fill = guide_colorsteps(barwidth = 25, barheight = 0.75))
 ```
 :::
