--- a/course-materials/week10.qmd
+++ b/course-materials/week10.qmd
@@ -22,32 +22,28 @@ knitr::include_graphics(here::here("images", "horst-touchstones.png"))
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep}
 
 *Coming soon!* 
-<!-- Please be sure to complete the following before class: -->
 
-<!-- ### A. Install required packages -->
+### A. Install required packages
 
-<!-- ```{r} -->
-<!-- #| eval: false -->
-<!-- #| echo: true -->
-<!-- #| code-line-numbers: false -->
-<!-- library(waffle) # for making waffle (square pie) charts in R -->
-<!-- library(ggbump) # a geom for creating bump charts -->
-<!-- ``` -->
+```{r}
+#| eval: false
+#| echo: true
+#| code-line-numbers: false
+library(waffle) # for making waffle (square pie) charts in R
+library(ggbump) # a geom for creating bump charts
+```
 
-<!-- ### B. Prompt engineering prep -->
+### B. Download .qmd templates 
 
-<!-- To follow along with Sevan's lesson on ChatGPT prompt engineering for data wrangling & visualization, you'll need to first: -->
-
-<!-- 1. [Create a free OpenAI account](https://chat.openai.com/auth/login) (if you don't already have one), or make sure you know your login credentials -->
-<!-- 2. [Download this `.xlsx` data file](https://docs.google.com/spreadsheets/d/1VeWF01_2--KXS7sB-IfPGVNNkGdGcGpN/edit?usp=sharing&ouid=103292946495291407556&rtpof=true&sd=true) and save it somewhere you can easily find -->
+Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week10/` folder. No need to review any of the code ahead of class -- we'll be walking through it all together.
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
-*Coming soon!* 
-
-<!-- - Misc. charts: week10.1-misc-charts-slides.qmd -->
-<!-- - Prompt engineering: https://docs.google.com/presentation/d/11i_Q33FCaKlQYNlGUpzOa8zb9fpfxB3eTFfD6cjdlZo/edit#slide=id.p -->
-<!-- - Quarter recap: lecture-slides/week10.3-recap.qmd -->
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
+|------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
+| [Lecture 10.1: misc. chart types](lecture-slides/lecture10.1-misc-charts-slides.qmd){target="_blank"}  | [10.1 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week10/TEMPLATE-10.1-misc-charts.qmd){target="_blank"} | [10.1 key](keys/KEY-lecture10.1-misc-charts.qmd){target="_blank"} |
+| [Lecture 10.2: quarter recap](lecture-slides/lecture10.2-recap-slides.qmd){target="_blank"} | *NA* | *NA* |
+: {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
 
@@ -70,17 +66,17 @@ We'll use our last discussion section to give and receive feedback on final pres
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
-| Assignment Type | Assignment Title                 | Date Assigned  | Date Due                   |
-|-----------------|----------------------------------|----------------|----------------------------|
-| EOC             | EOC (week 10)                    | Mon 03/10/2025 | Mon 03/10/2025, 11:55pm PT |
-| HW              | [Homework Assignment #4](assignments/HW4.qmd)           | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT |
-| SR              | End-of-course reflection (SR #3) | Mon 03/10/2025 | Sat 03/15/2025, 11:59pm PT |
-: {.hover .bordered tbl-colwidths="[20,30,20,30]"}
-
-<!-- | Assignment Type | Assignment Title                                                   | Date Assigned  | Date Due                  | -->
-<!-- |-----------------|-------------------------------------------------------------------|----------------|----------------------------| -->
-<!-- | EOC             | [EOC (week 10)](https://forms.gle/p6W89kVHguXJrkDb7)              | Mon 03/10/2025 | Mon 03/11/2025, 11:55pm PT | -->
-<!-- | HW              | [Homework Assignment #4](assignments/HW4.qmd)                     | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT | -->
-<!-- | SR              | [End-of-course reflection (SR #3)](assignments/SR3-endcourse.qmd) | Mon 03/10/2025 | Sat 03/15/2025, 11:59pm PT | -->
+<!-- | Assignment Type | Assignment Title                 | Date Assigned  | Date Due                   | -->
+<!-- |-----------------|----------------------------------|----------------|----------------------------| -->
+<!-- | EOC             | EOC (week 10)                    | Mon 03/10/2025 | Mon 03/10/2025, 11:55pm PT | -->
+<!-- | HW              | [Homework Assignment #4](assignments/HW4.qmd)           | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT | -->
+<!-- | SR              | End-of-course reflection (SR #3) | Mon 03/10/2025 | Sat 03/15/2025, 11:59pm PT | -->
 <!-- : {.hover .bordered tbl-colwidths="[20,30,20,30]"} -->
+
+| Assignment Type | Assignment Title                                                   | Date Assigned  | Date Due                  |
+|-----------------|-------------------------------------------------------------------|----------------|----------------------------|
+| EOC             | [EOC (week 10)](https://forms.gle/p6W89kVHguXJrkDb7)              | Mon 03/10/2025 | Mon 03/11/2025, 11:55pm PT |
+| HW              | [Homework Assignment #4](assignments/HW4.qmd)                     | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT |
+| SR              | [End-of-course reflection (SR #3)](assignments/SR3-endcourse.qmd) | Mon 03/10/2025 | Sat 03/15/2025, 11:59pm PT |
+: {.hover .bordered tbl-colwidths="[20,30,20,30]"}
        
