--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -33,16 +33,16 @@ install.packages("ggrepel") # ggplot2 extension to repel overlapping labels
 install.packages("googlesheets4") # provides an R interface to Google Sheets via the Sheets API v4
 ```
 
-<!-- ### B. Download Data -->
+### B. Download Data
 
-<!-- In case we have trouble with the `{googlesheets4}` API, you can download and read in the following data files as normal (i.e. using `readr::read_csv()`): -->
+In case we have trouble with the `{googlesheets4}` API, you can download and read in the following data files as normal (i.e. using `readr::read_csv()`):
 
-<!-- - [metabolism-foraging-data.csv](https://drive.google.com/file/d/1NQV40ZHVkPUNA6FeFFQR0OxqYM4trM3w/view?usp=sharing) -->
-<!-- - [mono.csv](https://drive.google.com/file/d/13chLNHTLd0GRCFl-7OB921FzOKc6I-GK/view?usp=sharing) -->
+- [metabolism-foraging-data.csv](https://drive.google.com/file/d/1NQV40ZHVkPUNA6FeFFQR0OxqYM4trM3w/view?usp=sharing){target="_blank"}
+- [mono.csv](https://drive.google.com/file/d/13chLNHTLd0GRCFl-7OB921FzOKc6I-GK/view?usp=sharing){target="_blank"}
 
-<!-- If you choose (or need) to download and read in these files, be sure to save them to your class repo at `~/week6/data/`. -->
+If you choose (or need) to download and read in these files, be sure to save them to your class repo at `~/week6/data/`.
 
-### B. Download Font Awesome fonts
+### C. Download Font Awesome fonts
 
 We'll learn how to use [Font Awesome](https://fontawesome.com/){target="_blank"} icons in our ggplots. To do so, you'll need to download the Font Awesome font files and save them to your class repo. Do so by following these steps:
 
@@ -50,7 +50,7 @@ We'll learn how to use [Font Awesome](https://fontawesome.com/){target="_blank"}
 2. **Unzip the downloaded file:** You should see a folder inside called `otfs/` -- this contains three `.otf` files (aka OpenType font format files)
 3. **Copy the three `.otf` files to your class repo:** I recommend creating a `fonts/` folder inside your root directory, and dropping all three of them in there (e.g. `EDS-240-data-viz-examples/fonts/*.otf`)
 
-### C. Download .qmd templates & review data wrangling code
+### D. Download .qmd templates & review data wrangling code
 
 1. Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week6/` folder.
 
